--- a/css/wp-gizmos.css
+++ b/css/wp-gizmos.css
@@ -20,6 +20,11 @@ font-size:75%;
 padding-left:5px;
 }
 
+.postbox .gizmo-error {
+    color: red;
+    padding: .5em;
+}
+
 /* Tweaks for a WYSIWYG as Gizmo */
 .quicktags-toolbar input {
 width:auto;
